# workflows

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  setup.cfg  workflows.py
.github/workflows/: common-python.yml  main.yml
src/gh_workflows/: __init__.py  cli.py
tests/: gh_workflows_test.py
